--- a/server/views/partials/schedule-table.pug
+++ b/server/views/partials/schedule-table.pug
@@ -10,6 +10,18 @@
     .poster
       p.poster-note Poster
       p.schedule-session
+        a(href='/speakers/Michael_Free_IC') KOTESOL’s International Conference 2020: The Early Stages
+          i.fas.fa-external-link-alt
+      p.schedule-speaker Michael Free
+    .poster
+      p.poster-note Poster
+      p.schedule-session
+        a(href='/speakers/Michael_Free') KOTESOL’s “Teacher of the Year” Award
+          i.fas.fa-external-link-alt
+      p.schedule-speaker Michael Free
+    .poster
+      p.poster-note Poster
+      p.schedule-session
         a(href='/speakers/Ji-young_Suh') Developing an integrated ESP Material for Cabin Crew
           i.fas.fa-external-link-alt
       p.schedule-speaker Ji-young Suh
@@ -28,7 +40,7 @@
     .poster
       p.poster-note Poster
       p.schedule-session
-        a(href='/speakers/Sunhee_Ko') Exploring the Effects of Drama Techniques on Korean Middle School English Learners’ Motivation 
+        a(href='/speakers/Sunhee_Ko') Exploring the Effects of Drama Techniques on English Learners’ Motivation 
           i.fas.fa-external-link-alt
       p.schedule-speaker Sunhee Ko
 
@@ -45,107 +57,126 @@
       td.schedule-venue Foyer
     //- 10:00
     tr
-      td.schedule-time(rowspan='8') 
+      td.schedule-time(rowspan='10') 
         span 10:00 am
       td.schedule-span(colspan='4')
         | Workshops I 
         span (50 min)
-    tr.room1
-      td.schedule-track Highlighted
+    tr.room0
+      td.schedule-track Onnuri
       td.schedule-session
         a(href='/speakers/Grace_H_Wang') How to Do Action Research: A Guide for ELT Classroom Teachers 
           i.fas.fa-external-link-alt
       td.schedule-speaker Grace H. Wang
-      td.schedule-venue 103
+      td.schedule-venue Onnuri Hall
+    tr.room1
+      td.schedule-track Highlighted
+      td.schedule-session
+        a(href='/speakers/Ali_Safavi') Teaching EFL through Korean Culture 
+          i.fas.fa-external-link-alt
+      td.schedule-speaker Ali Safavi
+      td.schedule-venue 101
     tr.room2
       td.schedule-track Motivation
       td.schedule-session
         a(href='/speakers/David_Devora') Using Personal Relationships to Motivate English Learning 
           i.fas.fa-external-link-alt
       td.schedule-speaker David Devora
-      td.schedule-venue 104
+      td.schedule-venue 107
     tr.room3
       td.schedule-track Skills
       td.schedule-session
         a(href='/speakers/Richard_Schlight') EFL Academic Writing Instruction Workshop 
           i.fas.fa-external-link-alt
       td.schedule-speaker Richard Schlight
-      td.schedule-venue 201
-    tr.room4
-      td.schedule-track Technology
-      td.schedule-session
-        a(href='/speakers/Ali_Safavi') Teaching EFL through Korean Culture 
-          i.fas.fa-external-link-alt
-      td.schedule-speaker Ali Safavi
       td.schedule-venue 202
+    tr.room4(rowspan='2')
+      td.schedule-track(rowspan='2') Technology
+      td.schedule-session
+        a(href='/speakers/Angela_Jeannette') Ups and downs - Tracking student motivation though motivational panels 
+          i.fas.fa-external-link-alt
+      td.schedule-speaker Angela Jeannette
+      td.schedule-venue(rowspan='2') 201
+    tr
+      td.schedule-session
+        a(href='/speakers/Eric_Duncan_Reynolds') Mobile tech and Gamification: Motiva(c)tion in Korean EFL 
+          i.fas.fa-external-link-alt
+      td.schedule-speaker Eric Duncan Reynolds
     tr.room5
       td.schedule-track Mixed
       td.schedule-session
         a(href='/speakers/Mike_Peacock') Meet the SIGs Breakfast 
           i.fas.fa-external-link-alt
       td.schedule-speaker Mike Peacock
-      td.schedule-venue 203
+      td.schedule-venue 204
     tr.room6(rowspan='2')
       td.schedule-track(rowspan='2') Research
-      td.schedule-session
-        a(href='/speakers/Angela_Jeannette') Ups and downs - Tracking student motivation though motivational panels 
-          i.fas.fa-external-link-alt
-      td.schedule-speaker Angela Jeannette
-      td.schedule-venue(rowspan='2') 204
-    tr
       td.schedule-session
         a(href='/speakers/Stephen_Patrick_Hoag') Exploring Learning Autonomy and Motivation in South Korean Students 
           i.fas.fa-external-link-alt
       td.schedule-speaker Stephen Patrick Hoag
+      td.schedule-venue(rowspan='2') 203
+    tr
+      td.schedule-session
+        a(href='/speakers/Samantha_Rose_Levinson') A Dual Literacy Approach for Korean English Learners' Curriculum 
+          i.fas.fa-external-link-alt
+      td.schedule-speaker Samantha Rose Levinson
     //- 11:00
     tr
-      td.schedule-time(rowspan='8') 
+      td.schedule-time(rowspan='9') 
         span 11:00 am
       td.schedule-span(colspan='4')
         | Workshops II 
         span (50 min)
+    tr.room0
+      td.schedule-track Onnuri
+      td.schedule-session
+        a(href='/speakers/James_Kimball_SIG') Motivating Young Learners Through Effective Classroom Management 
+          i.fas.fa-external-link-alt 
+      td.schedule-speaker James Kimball
+      td.schedule-venue Onnuri Hall
     tr.room1
       td.schedule-track Highlighted
       td.schedule-session
-        a(href='/speakers/James_Kimball') Motivating Young Learners Through Effective Classroom Management 
+        a(href='/speakers/Julian_Warmington') The Climate Change Vocab. List: The fun-time A-to-Z for global warming EFL
           i.fas.fa-external-link-alt 
-      td.schedule-speaker James Kimball
-      td.schedule-venue 103
+      td.schedule-speaker Julian Warmington
+      td.schedule-venue 101
     tr.room2
       td.schedule-track Motivation
       td.schedule-session
         a(href='/speakers/Bryan_Hale') Using Board Games for Conversation Practice 
           i.fas.fa-external-link-alt
       td.schedule-speaker Bryan Hale
-      td.schedule-venue 104
+      td.schedule-venue 107
     tr.room3
       td.schedule-track Skills
       td.schedule-session
         a(href='/speakers/Richard_Steven_Eigenberg') Practicing fluency alone? ABSOLUTELY! How about accuracy? MAYBE! 
           i.fas.fa-external-link-alt
       td.schedule-speaker Steven Eigenberg
-      td.schedule-venue 201
+      td.schedule-venue 202
     tr.room4
       td.schedule-track Technology
       td.schedule-session
         a(href='/speakers/Bethany_Martens') iPad pro Implementation for L2 instruction 
           i.fas.fa-external-link-alt
       td.schedule-speaker Bethany Martens
-      td.schedule-venue 202
+      td.schedule-venue 201
     tr.room5
       td.schedule-track Mixed
       td.schedule-session
-        a(href='/speakers/Michael_Free') Panel: Session Types and Speaker Selection at Kotesol's Large Events 
+        a(href='/speakers/Luis_Caballero_Orozco') Using Critical Language Pedgaogy in the EFL Classroom 
           i.fas.fa-external-link-alt
-      td.schedule-speaker Michael Free
-      td.schedule-venue 203
+      td.schedule-speaker Luis Roberto Caballero Orozco
+      td.schedule-venue 204
     tr.room6(rowspan='2')
       td.schedule-track(rowspan='2') Research
       td.schedule-session
         a(href='/speakers/Mary_Abura') Developing Learning Agility 
           i.fas.fa-external-link-alt
       td.schedule-speaker Mary Abura
-      td.schedule-venue(rowspan='2') 204
+      td.schedule-venue(rowspan='2') 203
     tr
       td.schedule-session
         a(href='/speakers/Yong-Jik_Lee') Elementary Pre-service Teachers’ Self-efficacy to Teach ELLs 
@@ -161,172 +192,198 @@
     tr.main-event
       td.schedule-time 1:00 pm
       td.schedule-track Plenary Session
-      td.schedule-session Teacher Identity in Language Teaching 
-        i.fas.fa-external-link-alt
+      td.schedule-session 
+        a(href='/speakers/plenary/Jack_Richards_Plenary') Seven Myths in Language Teaching 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Jack C. Richards
       td.schedule-venue Onnuri Hall
     //- 2:00
     tr
-      td.schedule-time(rowspan='8') 
+      td.schedule-time(rowspan='9') 
         span 2:00 pm
       td.schedule-span(colspan='4')
         | Workshops III 
         span (50 min)
-    tr.room1
-      td.schedule-track Highlighted
+    tr.room0
+      td.schedule-track Onnuri
       td.schedule-session
         a(href='/speakers/Nathalie_Calderon') Actively Incorporating Race Visibility within the Korean Classroom
           i.fas.fa-external-link-alt
       td.schedule-speaker Nathalie Calderon
-      td.schedule-venue 103
+      td.schedule-venue Onnuri Hall
+    tr.room1
+      td.schedule-track Highlighted
+      td.schedule-session
+        a(href='/speakers/James_Kimball') Motivation: Skip the Theory and Go Straight to Practice
+          i.fas.fa-external-link-alt
+      td.schedule-speaker James Kimball
+      td.schedule-venue 101
     tr.room2
       td.schedule-track Motivation
       td.schedule-session
         a(href='/speakers/Kylie_Genter') Improv Comedy as a Tool for English Language Learning 
           i.fas.fa-external-link-alt
       td.schedule-speaker Kylie Genter
-      td.schedule-venue 104
+      td.schedule-venue 107
     tr.room3
       td.schedule-track Skills
       td.schedule-session
         a(href='/speakers/Emmy_Min') Giving Feedback to Students' Writing 
           i.fas.fa-external-link-alt
       td.schedule-speaker Emmy Min
-      td.schedule-venue 201
+      td.schedule-venue 202
     tr.room4
       td.schedule-track Technology
       td.schedule-session
-        a(href='/speakers/Diane_Santos') To See Each Piece of the Mosaic
+        a(href='/speakers/Ehean_Kim') Brave New World: English Class with Technology
           i.fas.fa-external-link-alt
-      td.schedule-speaker Diane Santos
-      td.schedule-venue 202
+      td.schedule-speaker Ehean Kim
+      td.schedule-venue 201
     tr.room5
       td.schedule-track Mixed
       td.schedule-session
         a(href='/speakers/Vanessa_Virgiel') EFL in Korea's Remote Elementary Schools: Challenges and Opportunities 
           i.fas.fa-external-link-alt
       td.schedule-speaker Vanessa Virgiel
-      td.schedule-venue 203
+      td.schedule-venue 204
     tr.room6(rowspan='2')
       td.schedule-track(rowspan='2') Research
-      td.schedule-session
-        a(href='/speakers/Rhoda_Makhanya') Project-Based learning: A method to spice up lessons 
-          i.fas.fa-external-link-alt
-      td.schedule-speaker Rhoda Makhanya
-      td.schedule-venue(rowspan='2') 204
-    tr
       td.schedule-session
         a(href='/speakers/Grant_Kimberlin') The Evil of Banality: Intersubjectivity and the Text 
           i.fas.fa-external-link-alt
       td.schedule-speaker Grant Kimberlin
+      td.schedule-venue(rowspan='2') 203
+    tr
+      td.schedule-session
+        a(href='/speakers/Rhoda_Makhanya') Project-Based learning: A method to spice up lessons 
+          i.fas.fa-external-link-alt
+      td.schedule-speaker Rhoda Makhanya
     //- 3:00
     tr
-      td.schedule-time(rowspan='8') 
+      td.schedule-time(rowspan='9') 
         span 3:00 pm
       td.schedule-span(colspan='4')
         | Workshops IV 
         span (50 min)
-    tr.room1
-      td.schedule-track Highlighted
+    tr.room0
+      td.schedule-track Onnuri
       td.schedule-session
         a(href='/speakers/Jack_Richards') Product &amp; Process in Course Evaluation 
           i.fas.fa-external-link-alt
       td.schedule-speaker Jack C. Richards
-      td.schedule-venue 103
+      td.schedule-venue Onnuri Hall
+    tr.room1
+      td.schedule-track Highlighted
+      td.schedule-session
+        a(href='/speakers/Diane_Santos') To See Each Piece of the Mosaic 
+          i.fas.fa-external-link-alt
+      td.schedule-speaker Diane Santos
+      td.schedule-venue 101
     tr.room2
       td.schedule-track Motivation
       td.schedule-session
         a(href='/speakers/Jared_McKee') Motivating Students to Read: Interactive Activities to Increase Engagement 
           i.fas.fa-external-link-alt
       td.schedule-speaker Jared McKee
-      td.schedule-venue 104
+      td.schedule-venue 107
     tr.room3
       td.schedule-track Skills
       td.schedule-session
         a(href='/speakers/Nicole_Domay') Classroom Management Strategies for the English Foreign Language Context 
           i.fas.fa-external-link-alt
       td.schedule-speaker Nicole Domay
-      td.schedule-venue 201
+      td.schedule-venue 202
     tr.room4
       td.schedule-track Technology
       td.schedule-session
         a(href='/speakers/Michael_Rabbidge') Innovation in the use of film in ELT 
           i.fas.fa-external-link-alt
       td.schedule-speaker Michael Rabbidge
-      td.schedule-venue 202
+      td.schedule-venue 201
     tr.room5
       td.schedule-track Mixed
       td.schedule-session
-        a(href='/speakers/York_Weatherford') Using Popular Music to Motivate University EFL Students 
-          i.fas.fa-external-link-alt
-      td.schedule-speaker York Weatherford
-      td.schedule-venue 203
+        //- a(href='/speakers/York_Weatherford') Using Popular Music to Motivate University EFL Students 
+        //-   i.fas.fa-external-link-alt
+      td.schedule-speaker 
+        //- | York Weatherford
+      td.schedule-venue 
+        //- | 204
     tr.room6(rowspan='2')
       td.schedule-track(rowspan='2') Research
-      td.schedule-session
-        a(href='/speakers/Eric_Duncan_Reynolds') Mobile tech and Gamification: Motiva(c)tion in Korean EFL 
-          i.fas.fa-external-link-alt
-      td.schedule-speaker Eric Duncan Reynolds
-      td.schedule-venue(rowspan='2') 204
-    tr
       td.schedule-session
         a(href='/speakers/Hee-eun_Renee_Kim') Tag-Talk: “Who’s it?” “I’m it.” 
           i.fas.fa-external-link-alt
       td.schedule-speaker Hee-eun (Renee) Kim
+      td.schedule-venue(rowspan='2') 203
+    tr
+      td.schedule-session
+        a(href='/speakers/Valentin_Tassev') English Teachers' Perceptions on Assessing Pronunciation of Thai Students 
+          i.fas.fa-external-link-alt
+      td.schedule-speaker Valentin Tassev
     //- 4:00
     tr
-      td.schedule-time(rowspan='8') 
+      td.schedule-time(rowspan='9') 
         span 4:00 pm
       td.schedule-span(colspan='4')
         | Workshops V 
         span (50 min)
-    tr.room1
-      td.schedule-track Highlighted
+    tr.room0
+      td.schedule-track Onnuri
       td.schedule-session
         a(href='/speakers/Katrina_Sten') Hagwon Exposé: Where Student Motivation Equals Paychecks 
           i.fas.fa-external-link-alt
       td.schedule-speaker Katrina Sten
-      td.schedule-venue 103
+      td.schedule-venue Onnuri Hall
+    tr.room1
+      td.schedule-track Highlighted
+      td.schedule-session
+        a(href='/speakers/Pamila_J_Florea') Harry Potter and the Muggle Motivation 
+          i.fas.fa-external-link-alt
+      td.schedule-speaker Pamila J. Florea
+      td.schedule-venue 101
     tr.room2
       td.schedule-track Motivation
       td.schedule-session
         a(href='/speakers/Angela_DiSanto') Teaching Writing with Anything But! 
           i.fas.fa-external-link-alt
       td.schedule-speaker Angela DiSanto
-      td.schedule-venue 104
+      td.schedule-venue 107
     tr.room3
       td.schedule-track Skills
       td.schedule-session
-        a(href='/speakers/Pamila_J_Florea') Harry Potter and the Muggle Motivation 
-          i.fas.fa-external-link-alt
-      td.schedule-speaker Pamila J. Florea
-      td.schedule-venue 201
+        //- a(href='/speakers/Pamila_J_Florea') Harry Potter and the Muggle Motivation 
+        //-   i.fas.fa-external-link-alt
+      td.schedule-speaker 
+        //- | Pamila J. Florea
+      td.schedule-venue 
+        //- | 202
     tr.room
       td.schedule-track Technology
       td.schedule-session
         a(href='/speakers/Jessica_Magnusson') Creating Administrative Systems with QR Codes and Google Drive Tools 
           i.fas.fa-external-link-alt
       td.schedule-speaker Jessica Magnusson
-      td.schedule-venue 202
+      td.schedule-venue 201
     tr.room
       td.schedule-track Mixed
       td.schedule-session
         a(href='/speakers/Paul_Johnson') Why Study Philosophy? 
           i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
-      td.schedule-venue 203
+      td.schedule-venue 204
     tr.room6(rowspan='2')
       td.schedule-track(rowspan='2') Research
-      td.schedule-session
-        a(href='/speakers/David_Cedric_Bennette') A root analytic approach to academic word lists 
-          i.fas.fa-external-link-alt
-      td.schedule-speaker David Cedric Bennette
-      td.schedule-venue(rowspan='2') 204
-    tr
       td.schedule-session
         a(href='/speakers/Joseph_Tomei') Construal in Language Learning 
           i.fas.fa-external-link-alt
       td.schedule-speaker Joseph_Tomei
+      td.schedule-venue(rowspan='2') 203
+    tr
+      td.schedule-session
+        a(href='/speakers/David_Cedric_Bennette') A root analytic approach to academic word lists 
+          i.fas.fa-external-link-alt
+      td.schedule-speaker David Cedric Bennette
     //- Closing
     tr.main-event
       td.schedule-time 4:50 pm
