--- a/server/views/schedule.pug
+++ b/server/views/schedule.pug
@@ -12,7 +12,7 @@ block content
         a.button(href='/speakers') Meet our Speakers
   include partials/schedule-table
   //- include partials/schedule-table-outline
-  include partials/prereg
+  //- include partials/prereg
   .speakers-container
     .container
       include partials/speaker-grid
