--- a/server/views/sponsors.pug
+++ b/server/views/sponsors.pug
@@ -73,6 +73,24 @@ block content
       // BRONZE Sponsors (50,000)
       h5.sponsor-level-title Bronze
       ul.sponsor-list
+        // Masala (100,000)
+        li.sponsor-list-item.bronze-sponsor
+          a(href='https://place.map.kakao.com/24169074')
+            img.sponsor-logo(src='/img/sponsors/masala-logo.png')
+          .sponsor-meta
+            h5.sponsor-name Masala
+            small.sponsor-address
+              //- a(href='http://naver.me/5nM2hnF3') 
+              | 전주시 완산구 어진길 122-6
+        // Ay Mamita (50,000)
+        li.sponsor-list-item.bronze-sponsor
+          a(href='https://place.map.kakao.com/476149939')
+            img.sponsor-logo(src='/img/sponsors/ay-mamita-logo.png')
+          .sponsor-meta
+            h5.sponsor-name ¡Ay Mamita!
+            small.sponsor-address
+              //- a(href='http://naver.me/5nM2hnF3') 
+              | 전주시 완산구 전주객사1길 46-7
         // Yega Restaurant (50,000)
         li.sponsor-list-item.bronze-sponsor
           a(href='http://naver.me/5nM2hnF3')
