--- a/server/views/tickets.pug
+++ b/server/views/tickets.pug
@@ -32,7 +32,7 @@ block content
                   | After party in 
                   a(href='/location#shinsikaji') Shinsikaji
             .buy
-              p.center Pre-register now!
+              p.center Register now!
               p.center
                 a.page-button.button-inverse.button(href='https://koreatesol.org/content/2019-national-conference-pre-registration') Register
         li.center
@@ -92,7 +92,7 @@ block content
                   a(href='https://koreatesol.org/content/member-benefits') many more
                   | !
             .buy
-              p.center Pre-register now!
+              p.center Register now!
               p.center
                 a.page-button.button-inverse.button(href='https://koreatesol.org/content/2019-national-conference-pre-registration') Register
         li.center
@@ -160,6 +160,6 @@ block content
                   a(href='https://koreatesol.org/content/member-benefits') many more
                   | !
             .buy
-              p.center Pre-register now!
+              p.center Register now!
               p.center
                 a.page-button.button-inverse.button(href='https://koreatesol.org/content/2019-national-conference-pre-registration') Register
