--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -48,11 +48,11 @@ block content
             svg.pie-plate(width='100', height='100')
               circle.pie(r='50', cx='50', cy='50')
 
-      p.page-note 
-        | Pre-registration closes May 10!
-        br 
-        | Sign up now! 
-        a(href='https://koreatesol.org/content/2019-national-conference-pre-registration') Register
+      //- p.page-note 
+      //-   | Pre-registration closes May 17!
+      //-   br 
+      //-   | Sign up now! 
+      //-   a(href='https://koreatesol.org/content/2019-national-conference-pre-registration') Register
       p.presented-by 
         | Presented by
         a(href="https://koreatesol.org")
@@ -65,8 +65,8 @@ block content
   section.pages-section.plenary
     include partials/plenary
 
-  section.call 
-    include partials/prereg
+  //- section.call 
+  //-   include partials/prereg
 
   section.page-section.speakers
     include partials/speaker-grid 
