--- a/server/views/speakers.pug
+++ b/server/views/speakers.pug
@@ -10,5 +10,5 @@ block content
 
   section.page-section
     include partials/plenary
-  include partials/prereg
+  //- include partials/prereg
   include partials/speaker-list
